# Nordic_power_control_and_path_loss_monitoring

./: README.md  README2.rst
Central/: prj.conf
Central/src/: main.c
Central/tools/: plot_path_loss.py
Peripheral/: prj.conf
Peripheral/src/: main.c
path_loss_monitoring/: README_V3.rst
path_loss_monitoring/Central/: prj.conf  sample.yaml
path_loss_monitoring/Central/src/: main.c
path_loss_monitoring/Peripheral/: sample.yaml
power_control/: README.md
power_control/Central/: CMakeLists.txt  prj.conf
power_control/Central/src/: main.c
power_control/Peripheral/: CMakeLists.txt  prj.conf
power_control/Peripheral/src/: main.c
power_control/tools/: plot_path_loss.py
